--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "license": "ISC",
   "devDependencies": {
     "markdownlint-cli2": "0.9.2",
-    "textlint": "^13.3.3"
+    "textlint": "^13.3.3",
+    "textlint-filter-rule-allowlist": "^4.0.0",
+    "textlint-filter-rule-comments": "^1.2.2",
+    "textlint-rule-preset-ja-technical-writing": "^8.0.0"
   }
 }
