feat: add @textlint/markdown

--- a/.textlintrc.json
+++ b/.textlintrc.json
@@ -1,4 +1,9 @@
 {
+  "plugins": {
+    "@textlint/markdown": {
+      "extensions": [".md"]
+    }
+  },
   "filters": {
     "comments": true
   },
