--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@textlint/textlint-plugin-markdown": "^13.3.3",
     "markdownlint-cli2": "0.9.2",
     "textlint": "13.3.3",
     "textlint-filter-rule-allowlist": "4.0.0",
