--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@textlint/textlint-plugin-markdown": "14.0.4",
-    "markdownlint-cli2": "0.12.1",
-    "textlint": "14.0.4",
+    "@textlint/textlint-plugin-markdown": "15.1.0",
+    "markdownlint-cli2": "0.18.1",
+    "textlint": "15.1.0",
     "textlint-filter-rule-allowlist": "4.0.0",
     "textlint-filter-rule-comments": "1.2.2",
-    "textlint-rule-preset-ja-technical-writing": "10.0.1"
+    "textlint-rule-preset-ja-technical-writing": "12.0.2",
+    "@textlint-ja/textlint-rule-preset-ai-writing": "1.4.0"
   }
 }
