--- a/renovate.json
+++ b/renovate.json
@@ -1,26 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:base",
-    ":enablePreCommit",
-    ":timezone(Asia/Tokyo)"
-  ],
-  "rangeStrategy": "pin",
-  "major": {
-    "automerge": false
-  },
-  "lockFileMaintenance": {
-    "enabled": true,
-    "automerge": true
-  },
-  "packageRules": [
-    {
-      "automerge": true,
-      "matchManagers": ["pre-commit"]
-    },
-    {
-      "automerge": true,
-      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
-    }
+    "github>okhiroyuki/renovate-config"
   ]
 }
